# aexis

./: .env.example  .gitignore  README.md  docker-compose.yml  payload_injector.py  run_services.sh
aexis/: README.md  network.json  pyproject.toml  pytest.ini
aexis/api/: main.py  routes.py
aexis/cli/: console.py
aexis/core/: __init__.py  ai_provider.py  errors.py  logging_config.py  message_bus.py  model.py  network.py  pod.py  routing.py  station.py  station_client.py  system.py
aexis/core/gradient/: guardrail_config.py  knowledge_base_manager.py
aexis/networks/: README.md  __init__.py  cli.py  disconnected.json  linear_5.json  metroplex.json  simple.json  star_hub.json  triangle.json
aexis/pod/: __init__.py  main.py
aexis/station/: __init__.py  main.py
aexis/tests/: conftest.py  test_adversarial_edge_cases.py  test_ai_provider.py  test_behavior_edge_cases.py  test_boundary_vector.py  test_cargo_pod.py  test_comprehensive.py  test_concurrency_vector.py  test_integration_flow.py  test_lifecycle_vector.py  test_multi_stop_delivery.py  test_network.json  test_pod_movement.py  test_pod_routing_integrated.py  test_pod_states.py  test_pod_station_integration.py  test_recovery_vector.py  test_routing.py  test_routing_vector.py  test_state_propagation.py  test_station_client.py  test_station_events.py  test_station_queues.py  test_status_snapshot_fidelity.py  test_system_movement.py  test_template_parametric.py  test_topology_routing.py
aexis/web/: README.md  __init__.py  dashboard.py  main.py  tsconfig.json
aexis/web/static/: index.html  style.css
(+5 files in other folders)
