[project]
name = "aexis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradientai>=1.0.0",
    "gradient-adk>=0.1.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.6.1",
    "redis>=5.0.0",
    "redis[hiredis]>=5.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "tabulate>=0.9.0",
    "fakeredis[lua]>=2.34.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "ruff>=0.14.14",
    "debugpy>=1.8.20",
    "pytest-mock>=3.15.1",
    "fakeredis[lua]>=2.34.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-s"


[tool.setuptools.packages.find]
include = ["cli*", "web*", "api*", "core*"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "B", "UP"]  # Common flake8 rules
lint.ignore = []  # Customize
lint.fixable = ["ALL"]  # Enable all safe fixes
